objects/Account_Domain__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Domains</relationshipLabel>
        <relationshipName>Account_Domains</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Type__c</fullName>
        <label>Match Type</label>
        <picklist>
            <picklistValues>
                <fullName>Exact Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ends With</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Row Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isMigrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Domain</label>
    <nameField>
        <displayFormat>AccDom-{0000}</displayFormat>
        <label>Account Domain</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Domains</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>